antlr/gen/IncidentFlowParser.java
// Generated from IncidentFlow.g4 by ANTLR 4.13.2
package incidentflow;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class IncidentFlowParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PLAYBOOK=1, CONFIG=2, TRIGGER=3, PHASE=4, DO=5, IF=6, THEN=7, ELSE=8, 
		FOR=9, EACH=10, IN=11, WAIT=12, FROM=13, TIMEOUT=14, ON_TIMEOUT=15, ON_FAIL=16, 
		VERIFY=17, LOG=18, GOTO=19, REPORT=20, AND=21, OR=22, NOT=23, PARALLEL=24, 
		SEVERITY=25, IMPORT=26, AS=27, TRUE=28, FALSE=29, LOW=30, MEDIUM=31, HIGH=32, 
		CRITICAL=33, IDENTIFIER=34, STRING=35, DURATION=36, INT=37, EQ=38, NEQ=39, 
		GTE=40, LTE=41, GT=42, LT=43, COLON=44, COMMA=45, DOT=46, LPAREN=47, RPAREN=48, 
		LBRACKET=49, RBRACKET=50, ASSIGN=51, ARROW=52, COMMENT=53, BLOCK_COMMENT=54, 
		WHITESPACE=55, BOM=56;
	public static final int
		RULE_program = 0, RULE_import_decl = 1, RULE_config_block = 2, RULE_config_name = 3, 
		RULE_config_entry = 4, RULE_config_value = 5, RULE_list_lit = 6, RULE_chain_lit = 7, 
		RULE_playbook_decl = 8, RULE_trigger_decl = 9, RULE_phase_decl = 10, RULE_report_decl = 11, 
		RULE_statement = 12, RULE_do_stmt = 13, RULE_if_stmt = 14, RULE_for_stmt = 15, 
		RULE_wait_stmt = 16, RULE_timeout_handler = 17, RULE_verify_stmt = 18, 
		RULE_fail_handler = 19, RULE_log_stmt = 20, RULE_goto_stmt = 21, RULE_assign_stmt = 22, 
		RULE_parallel_block = 23, RULE_severity_stmt = 24, RULE_expr = 25, RULE_or_expr = 26, 
		RULE_and_expr = 27, RULE_not_expr = 28, RULE_comparison = 29, RULE_comp_op = 30, 
		RULE_primary = 31, RULE_member_access = 32, RULE_function_call = 33, RULE_argument_list = 34, 
		RULE_argument = 35, RULE_literal = 36, RULE_bool_lit = 37, RULE_severity_lit = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "import_decl", "config_block", "config_name", "config_entry", 
			"config_value", "list_lit", "chain_lit", "playbook_decl", "trigger_decl", 
			"phase_decl", "report_decl", "statement", "do_stmt", "if_stmt", "for_stmt", 
			"wait_stmt", "timeout_handler", "verify_stmt", "fail_handler", "log_stmt", 
			"goto_stmt", "assign_stmt", "parallel_block", "severity_stmt", "expr", 
			"or_expr", "and_expr", "not_expr", "comparison", "comp_op", "primary", 
			"member_access", "function_call", "argument_list", "argument", "literal", 
			"bool_lit", "severity_lit"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'PLAYBOOK'", "'CONFIG'", "'TRIGGER'", "'PHASE'", "'DO'", "'IF'", 
			"'THEN'", "'ELSE'", "'FOR'", "'EACH'", "'IN'", "'WAIT'", "'FROM'", "'TIMEOUT'", 
			"'ON_TIMEOUT'", "'ON_FAIL'", "'VERIFY'", "'LOG'", "'GOTO'", "'REPORT'", 
			"'AND'", "'OR'", "'NOT'", "'PARALLEL'", "'SEVERITY'", "'IMPORT'", "'AS'", 
			"'TRUE'", "'FALSE'", "'LOW'", "'MEDIUM'", "'HIGH'", "'CRITICAL'", null, 
			null, null, null, "'=='", "'!='", "'>='", "'<='", "'>'", "'<'", "':'", 
			"','", "'.'", "'('", "')'", "'['", "']'", "'='", "'->'", null, null, 
			null, "'\\uFEFF'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PLAYBOOK", "CONFIG", "TRIGGER", "PHASE", "DO", "IF", "THEN", "ELSE", 
			"FOR", "EACH", "IN", "WAIT", "FROM", "TIMEOUT", "ON_TIMEOUT", "ON_FAIL", 
			"VERIFY", "LOG", "GOTO", "REPORT", "AND", "OR", "NOT", "PARALLEL", "SEVERITY", 
			"IMPORT", "AS", "TRUE", "FALSE", "LOW", "MEDIUM", "HIGH", "CRITICAL", 
			"IDENTIFIER", "STRING", "DURATION", "INT", "EQ", "NEQ", "GTE", "LTE", 
			"GT", "LT", "COLON", "COMMA", "DOT", "LPAREN", "RPAREN", "LBRACKET", 
			"RBRACKET", "ASSIGN", "ARROW", "COMMENT", "BLOCK_COMMENT", "WHITESPACE", 
			"BOM"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "IncidentFlow.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IncidentFlowParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(IncidentFlowParser.EOF, 0); }
		public List<Config_blockContext> config_block() {
			return getRuleContexts(Config_blockContext.class);
		}
		public Config_blockContext config_block(int i) {
			return getRuleContext(Config_blockContext.class,i);
		}
		public List<Import_declContext> import_decl() {
			return getRuleContexts(Import_declContext.class);
		}
		public Import_declContext import_decl(int i) {
			return getRuleContext(Import_declContext.class,i);
		}
		public List<Playbook_declContext> playbook_decl() {
			return getRuleContexts(Playbook_declContext.class);
		}
		public Playbook_declContext playbook_decl(int i) {
			return getRuleContext(Playbook_declContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IncidentFlowListener ) ((IncidentFlowListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IncidentFlowListener ) ((IncidentFlowListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IncidentFlowVisitor ) return ((IncidentFlowVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CONFIG) {
				{
				{
				setState(78);
				config_block();
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(84);
				import_decl();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(91); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(90);
				playbook_decl();
				}
				}
				setState(93); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==PLAYBOOK );
			setState(95);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Import_declContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(IncidentFlowParser.IMPORT, 0); }
		public TerminalNode STRING() { return getToken(IncidentFlowParser.STRING, 0); }
		public TerminalNode AS() { return getToken(IncidentFlowParser.AS, 0); }
		public TerminalNode IDENTIFIER() { return getToken(IncidentFlowParser.IDENTIFIER, 0); }
		public Import_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IncidentFlowListener ) ((IncidentFlowListener)listener).enterImport_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IncidentFlowListener ) ((IncidentFlowListener)listener).exitImport_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IncidentFlowVisitor ) return ((IncidentFlowVisitor<? extends T>)visitor).visitImport_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import_declContext import_decl() throws RecognitionException {
		Import_declContext _localctx = new Import_declContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_import_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(IMPORT);
			setState(98);
			match(STRING);
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AS) {
				{
				setState(99);
				match(AS);
				setState(100);
				match(IDENTIFIER);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Config_blockContext extends ParserRuleContext {
		public TerminalNode CONFIG() { return getToken(IncidentFlowParser.CONFIG, 0); }
		public Config_nameContext config_name() {
			return getRuleContext(Config_nameContext.class,0);
		}
		public TerminalNode COLON() { return getToken(IncidentFlowParser.COLON, 0); }
		public List<Config_entryContext> config_entry() {
			return getRuleContexts(Config_entryContext.class);
		}
		public Config_entryContext config_entry(int i) {
			return getRuleContext(Config_entryContext.class,i);
		}
		public Config_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_config_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IncidentFlowListener ) ((IncidentFlowListener)listener).enterConfig_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IncidentFlowListener ) ((IncidentFlowListener)listener).exitConfig_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IncidentFlowVisitor ) return ((IncidentFlowVisitor<? extends T>)visitor).visitConfig_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Config_blockContext config_block() throws RecognitionException {
		Config_blockContext _localctx = new Config_blockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_config_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(CONFIG);
			setState(104);
			config_name();
			setState(105);
			match(COLON);
			setState(107); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(106);
				config_entry();
				}
				}
				setState(109); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENTIFIER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Config_nameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(IncidentFlowParser.IDENTIFIER, 0); }
		public Config_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_config_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IncidentFlowListener ) ((IncidentFlowListener)listener).enterConfig_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IncidentFlowListener ) ((IncidentFlowListener)listener).exitConfig_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IncidentFlowVisitor ) return ((IncidentFlowVisitor<? extends T>)visitor).visitConfig_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Config_nameContext config_name() throws RecognitionException {
		Config_nameContext _localctx = new Config_nameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_config_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Config_entryContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(IncidentFlowParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(IncidentFlowParser.COLON, 0); }
		public Config_valueContext config_value() {
			return getRuleContext(Config_valueContext.class,0);
		}
		public Config_entryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_config_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IncidentFlowListener ) ((IncidentFlowListener)listener).enterConfig_entry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IncidentFlowListener ) ((IncidentFlowListener)listener).exitConfig_entry(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IncidentFlowVisitor ) return ((IncidentFlowVisitor<? extends T>)visitor).visitConfig_entry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Config_entryContext config_entry() throws RecognitionException {
		Config_entryContext _localctx = new Config_entryContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_config_entry);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(IDENTIFIER);
			setState(114);
			match(COLON);
			setState(115);
			config_value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Config_valueContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(IncidentFlowParser.STRING, 0); }
		public TerminalNode INT() { return getToken(IncidentFlowParser.INT, 0); }
		public Severity_litContext severity_lit() {
			return getRuleContext(Severity_litContext.class,0);
		}
		public Bool_litContext bool_lit() {
			return getRuleContext(Bool_litContext.class,0);
		}
		public List_litContext list_lit() {
			return getRuleContext(List_litContext.class,0);
		}
		public Chain_litContext chain_lit() {
			return getRuleContext(Chain_litContext.class,0);
		}
		public Config_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_config_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IncidentFlowListener ) ((IncidentFlowListener)listener).enterConfig_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IncidentFlowListener ) ((IncidentFlowListener)listener).exitConfig_value(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IncidentFlowVisitor ) return ((IncidentFlowVisitor<? extends T>)visitor).visitConfig_value(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Config_valueContext config_value() throws RecognitionException {
		Config_valueContext _localctx = new Config_valueContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_config_value);
		try {
			setState(123);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				match(STRING);
				}
				break;
			case INT:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				match(INT);
				}
				break;
			case LOW:
			case MEDIUM:
			case HIGH:
			case CRITICAL:
				enterOuterAlt(_localctx, 3);
				{
				setState(119);
				severity_lit();
				}
				break;
			case TRUE:
			case FALSE:
				enterOuterAlt(_localctx, 4);
				{
				setState(120);
				bool_lit();
				}
				break;
			case LBRACKET:
				enterOuterAlt(_localctx, 5);
				{
				setState(121);
				list_lit();
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 6);
				{
				setState(122);
				chain_lit();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class List_litContext extends ParserRuleContext {
		public TerminalNode LBRACKET() { return getToken(IncidentFlowParser.LBRACKET, 0); }
		public List<Config_valueContext> config_value() {
			return getRuleContexts(Config_valueContext.class);
		}
		public Config_valueContext config_value(int i) {
			return getRuleContext(Config_valueContext.class,i);
		}
		public TerminalNode RBRACKET() { return getToken(IncidentFlowParser.RBRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(IncidentFlowParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(IncidentFlowParser.COMMA, i);
		}
		public List_litContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_lit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IncidentFlowListener ) ((IncidentFlowListener)listener).enterList_lit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IncidentFlowListener ) ((IncidentFlowListener)listener).exitList_lit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IncidentFlowVisitor ) return ((IncidentFlowVisitor<? extends T>)visitor).visitList_lit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final List_litContext list_lit() throws RecognitionException {
		List_litContext _localctx = new List_litContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_list_lit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(LBRACKET);
			setState(126);
			config_value();
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(127);
				match(COMMA);
				setState(128);
				config_value();
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(134);
			match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Chain_litContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(IncidentFlowParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(IncidentFlowParser.IDENTIFIER, i);
		}
		public List<TerminalNode> ARROW() { return getTokens(IncidentFlowParser.ARROW); }
		public TerminalNode ARROW(int i) {
			return getToken(IncidentFlowParser.ARROW, i);
		}
		public Chain_litContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chain_lit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IncidentFlowListener ) ((IncidentFlowListener)listener).enterChain_lit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IncidentFlowListener ) ((IncidentFlowListener)listener).exitChain_lit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IncidentFlowVisitor ) return ((IncidentFlowVisitor<? extends T>)visitor).visitChain_lit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Chain_litContext chain_lit() throws RecognitionException {
		Chain_litContext _localctx = new Chain_litContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_chain_lit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(IDENTIFIER);
			setState(139); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(137);
				match(ARROW);
				setState(138);
				match(IDENTIFIER);
				}
				}
				setState(141); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ARROW );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Playbook_declContext extends ParserRuleContext {
		public TerminalNode PLAYBOOK() { return getToken(IncidentFlowParser.PLAYBOOK, 0); }
		public TerminalNode IDENTIFIER() { return getToken(IncidentFlowParser.IDENTIFIER, 0); }
		public Trigger_declContext trigger_decl() {
			return getRuleContext(Trigger_declContext.class,0);
		}
		public List<Phase_declContext> phase_decl() {
			return getRuleContexts(Phase_declContext.class);
		}
		public Phase_declContext phase_decl(int i) {
			return getRuleContext(Phase_declContext.class,i);
		}
		public Report_declContext report_decl() {
			return getRuleContext(Report_declContext.class,0);
		}
		public Playbook_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_playbook_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IncidentFlowListener ) ((IncidentFlowListener)listener).enterPlaybook_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IncidentFlowListener ) ((IncidentFlowListener)listener).exitPlaybook_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IncidentFlowVisitor ) return ((IncidentFlowVisitor<? extends T>)visitor).visitPlaybook_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Playbook_declContext playbook_decl() throws RecognitionException {
		Playbook_declContext _localctx = new Playbook_declContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_playbook_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(PLAYBOOK);
			setState(144);
			match(IDENTIFIER);
			setState(145);
			trigger_decl();
			setState(147); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(146);
				phase_decl();
				}
				}
				setState(149); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==PHASE );
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==REPORT) {
				{
				setState(151);
				report_decl();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Trigger_declContext extends ParserRuleContext {
		public TerminalNode TRIGGER() { return getToken(IncidentFlowParser.TRIGGER, 0); }
		public TerminalNode COLON() { return getToken(IncidentFlowParser.COLON, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Trigger_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trigger_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IncidentFlowListener ) ((IncidentFlowListener)listener).enterTrigger_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IncidentFlowListener ) ((IncidentFlowListener)listener).exitTrigger_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IncidentFlowVisitor ) return ((IncidentFlowVisitor<? extends T>)visitor).visitTrigger_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Trigger_declContext trigger_decl() throws RecognitionException {
		Trigger_declContext _localctx = new Trigger_declContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_trigger_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(TRIGGER);
			setState(155);
			match(COLON);
			setState(156);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
